[package]
name = "sidequest"
version = "0.0.0"
authors = ["Sam Sartor <me@samsartor.com>"]

[dependencies]
failure = "0.1"
rayon = "^1.0"
image = "0.19"
clap = "^2.32"
indicatif = "0.9"
num-traits = "0.2"
imgref = "^1.3"
ncollide = "0.14"
palette = "0.4"
rand = "0.5"
sdl2 = "0.31"
dynpool = { git = "https://gitlab.com/samsartor/dynpool.git" }
crossbeam-channel = "0.2"

[dependencies.nalgebra]
version = "0.14"
features = ["serde-serialize"]
