[package]
name = "sidequest"
version = "0.0.0"
authors = ["Sam Sartor <me@samsartor.com>"]

[dependencies]
structopt = "0.2"
failure = "0.1"
image = "0.20"
indicatif = "0.9"
num-traits = "0.2"
imgref = "^1.3"
ncollide = "0.14"
palette = "0.4"
rand = "0.5"
sdl2 = "0.31"
dynpool = "0.0.0"
crossbeam-channel = "0.2"
num_cpus = "1.8"

[dependencies.nalgebra]
version = "0.14"
features = ["serde-serialize"]
